--- a/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/getempcontent.ajax.phtml
@@ -205,8 +205,8 @@ if(count($data) > 0 && !empty($data['rating_arr']))
                                     </td>
                                 <?php } elseif($ques['question_type'] == QUESTION_TYPE_RATINGONLY){ ?>
                                     <td>
-                                        <input tabindex="-1" <?php if($priv_data['MR'] == 1){echo 'class="app_req_field_'.$main_key.' app_ratings_text_'.$main_key.'"';}else{echo 'class="app_non_req_field"';}?> type="hidden" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" name="question_rating[<?php echo $ques['question_id'];?>]" value="<?php echo $qrating;?>">
-                                        <div onclick="removeValidationMessage(this)" class="rateit" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" data-rateit-backingfld="#question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" data-rateit-step="1" data-rateit-resetable="false" data-rateit-min="<?php echo $ratingMin;?>"  data-rateit-max="<?php echo $ratingMax;?>">
+                                        <input tabindex="-1" <?php if($priv_data['MR'] == 1){echo 'class="app_non_req_field"' /*app_ratings_text_'.$main_key.'"'*/;}else{echo 'class="app_non_req_field"';}?> type="hidden" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" name="question_rating[<?php echo $ques['question_id'];?>]" value="<?php echo $qrating;?>">
+                                        <div onclick="removeValidationMessage(this)" class="rateit" id="question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" data-rateit-backingfld="#question_rating_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>" data-rateit-step="1" data-rateit-resetable="true" data-rateit-min="<?php echo $ratingMin;?>"  data-rateit-max="<?php echo $ratingMax;?>">
                                         </div>
                                         <input type="hidden" class="appri_textarea" name="question_comments[<?php echo $ques['question_id'];?>]" id="idquestion_comments_<?php echo $user_id;?>_<?php echo $ques['question_id'];?>"><?php echo $qcomment;?></input>
                                     </td>
@@ -393,6 +393,7 @@ if(count($data) > 0 && !empty($data['rating_arr']))
             jConfirm(msg, "Confirmation", function(resp) {
                 if(resp){
                     $.blockUI({ width:'50px',message: $("#spinner").html() });
+                    $(window).off('beforeunload');
                     $('#idfrm_manager_response_'+key).submit();
                 } else {
                     jAlert("You must agree to continue.", "Info");
